k8s/mexico/01_publisher.yaml
################ publisher
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
spec:
  selector:
    matchLabels:
      name: publisher
  template:
    metadata:
      labels:
        name: publisher
    spec:
      containers:
      - image: gcr.io/urbvan-test-281023/publisher:latest
        imagePullPolicy: Always
        name: publisher
        ports:
        - name: gunicorn
          containerPort: 9000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 2
          failureThreshold: 3
          timeoutSeconds: 2
          initialDelaySeconds: 20
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 2
          initialDelaySeconds: 20
      terminationGracePeriodSeconds: 30
---
################ publisher service
apiVersion: v1
kind: Service
metadata:
  name: publisher
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: gunicorn
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    role: publisher
  sessionAffinity: None
  type: NodePort
---
### Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: publisher
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ip-us-central1-loadbalancer"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: publisher
spec:
  backend:
    serviceName: publisher
    servicePort: 9000
  rules:
  - host: publisher.urbvan.dgiovanni.me
    http:
      paths:
      - backend:
          serviceName: publisher
          servicePort: 9000
---
